test successful on remote exec